updated liri sub-category

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                     </div>
                                     <!-- WORK 8 END -->
                                     <!-- WORK 9 START -->
-                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webapp">
                                         <a href="https://github.com/kmayer48/liri-bot" target="_blank">
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
