added constructor word guess game

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                                     <div class="portfolio-content">
                                                         <h2>Rupee Collectors</h2>
                                                         <hr>
-                                                        <p>A Zelda number guessing game.</p>
+                                                        <p>A Zelda themed number guessing game.</p>
                                                     </div>
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
@@ -207,9 +207,9 @@
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
                                                     <div class="portfolio-content">
-                                                        <h2>DC Metro Scheduler</h2>
+                                                        <h2>Mock Metro Scheduler</h2>
                                                         <hr>
-                                                        <p>Scheduler that utilizes firebase and time.js to metro times.</p>
+                                                        <p>A web app that to show mock DC metro times.</p>
                                                     </div>
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
@@ -294,7 +294,7 @@
                                                     <div class="portfolio-content">
                                                         <h2>Liri Bot</h2>
                                                         <hr>
-                                                        <p>LIRI is a command line node.js app that takes in parameters and gives you back data.</p>
+                                                        <p>LIRI is a command line node.js app that takes in search parameters and returns specified results.</p>
                                                     </div>
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
@@ -303,6 +303,23 @@
                                         </a>
                                     </div>
                                     <!-- WORK 9 END -->
+                                    <!-- WORK 10 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item games">
+                                    <a href="https://github.com/kmayer48/constructor-word-guess" target="_blank">
+                                        <div class="portfolio-column">
+                                            <div class="portfolio-hover">
+                                                <div class="portfolio-content">
+                                                    <h2>Greek Mythology Guessing Game</h2>
+                                                    <hr>
+                                                    <p>A command line node.js word guessing game.</p>
+                                                </div>
+                                                <div class="portfolio-overlay"></div>
+                                            </div>
+                                            <img src="images/portfolio/masonry/constructor.jpg" alt="Greek Mythology Word Guess Game">
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- WORK 10 END -->
                                 </div>
                             </div>
                         </div>
