bamazon updates to portfolio

--- a/index.html
+++ b/index.html
@@ -320,6 +320,23 @@
                                     </a>
                                 </div>
                                 <!-- WORK 10 END -->
+                                <!-- WORK 11 START -->
+                                <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webapp">
+                                    <a href="https://github.com/kmayer48/bamazon" target="_blank">
+                                        <div class="portfolio-column">
+                                            <div class="portfolio-hover">
+                                                <div class="portfolio-content">
+                                                    <h2>Bamazon</h2>
+                                                    <hr>
+                                                    <p>An Amazon like shopping interface through the command line using Node.js and MySQL.</p>
+                                                </div>
+                                                <div class="portfolio-overlay"></div>
+                                            </div>
+                                            <img src="images/portfolio/masonry/cart.jpeg" alt="Bamazon">
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- WORK 4 END -->
                                 </div>
                             </div>
                         </div>
