updated portfolio page with friendfinder

--- a/index.html
+++ b/index.html
@@ -336,7 +336,24 @@
                                         </div>
                                     </a>
                                 </div>
-                                <!-- WORK 4 END -->
+                                <!-- WORK 11 END -->
+                                 <!-- WORK 12 START -->
+                                 <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
+                                    <a href="https://github.com/kmayer48/friendfinder" target="_blank">
+                                        <div class="portfolio-column">
+                                            <div class="portfolio-hover">
+                                                <div class="portfolio-content">
+                                                    <h2>Friend Finder</h2>
+                                                    <hr>
+                                                    <p>An online quiz that pairs you with a friend from the TV show "The Office."</p>
+                                                </div>
+                                                <div class="portfolio-overlay"></div>
+                                            </div>
+                                            <img src="images/portfolio/masonry/friendfinder.jpg" alt="Friend-Finder">
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- WORK 12 END -->
                                 </div>
                             </div>
                         </div>
