--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 </div>
                                 <!-- WORK 11 END -->
                                  <!-- WORK 12 START -->
-                                 <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webdesign">
+                                 <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item games">
                                     <a href="https://github.com/kmayer48/friendfinder" target="_blank">
                                         <div class="portfolio-column">
                                             <div class="portfolio-hover">
