updated portfolio with Balue project and NPR scraper

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                     </a>
                                 </div>
                                 <!-- WORK 12 END -->
-                                 <!-- WORK 12 START -->
+                                 <!-- WORK 13 START -->
                                  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webapp">
                                     <a href="https://github.com/kmayer48/burger" target="_blank">
                                         <div class="portfolio-column">
@@ -370,7 +370,41 @@
                                         </div>
                                     </a>
                                 </div>
-                                <!-- WORK 12 END -->
+                                <!-- WORK 13 END -->
+                                <!-- WORK 14 START -->
+                                <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webapp webdesign">
+                                    <a href="https://github.com/kmayer48/balue" target="_blank">
+                                        <div class="portfolio-column">
+                                            <div class="portfolio-hover">
+                                                <div class="portfolio-content">
+                                                    <h2>Balue</h2>
+                                                    <hr>
+                                                    <p>A web app that shows local Happy Hour specials in your area (WIP).</p>
+                                                </div>
+                                                <div class="portfolio-overlay"></div>
+                                            </div>
+                                            <img src="images/portfolio/masonry/balue.png" alt="Balue Logo">
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- WORK 14 END -->
+                                <!-- WORK 15 START -->
+                                <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item webapp webdesign">
+                                    <a href="https://github.com/kmayer48/webscraper" target="_blank">
+                                        <div class="portfolio-column">
+                                            <div class="portfolio-hover">
+                                                <div class="portfolio-content">
+                                                    <h2>NPR Web Scraper</h2>
+                                                    <hr>
+                                                    <p>A web app that lets you scrape news from NPR and store your comments in Mongodb.</p>
+                                                </div>
+                                                <div class="portfolio-overlay"></div>
+                                            </div>
+                                            <img src="images/portfolio/masonry/npr-logo.jpg" alt="NPR Logo">
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- WORK 15 END -->
                                 </div>
                             </div>
                         </div>
