--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                         <label class="progress-bar-label">Node.js | </label>
                         <label class="progress-bar-label">Firebase | </label>
                         <label class="progress-bar-label">API/Ajax |</label>
+                        <label class="progress-bar-label">Node.js |</label>
+                        <label class="progress-bar-label">Express |</label>
+                        <label class="progress-bar-label">My SQL |</label>
+                        <label class="progress-bar-label">Mongo DB</label>
                     </div>
                     <div class="block-content">
                         <h3 class="block-title">Education</h3>
