--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 <section class="content" id="about">
                     <div class="block-content">
                         <h3 class="block-title">Profile</h3>
-                        <h3 class="subheading">I'm a <strong>Full Stack Web Developer</strong> from Washington, DC. I
+                        <h3 class="subheading">
+                            I'm a <strong>Full Stack Web Developer</strong> from Washington, DC. I
                             aim to make a difference through my creative solutions.</h3>
-                        <p>My passion is to help my clients achieve thier goals through my custom-tailered websites and
-                            applications. With a yearn for continued education and creative design, I will strive to
-                            create your site or application to the exact specifications of your liking. I have a broad
-                            knowledge of industry standard technologies that are utlizied by major businesses worldwide.
+                        <p>
+                            My passion is to help clients achieve thier goals through my custom-tailered websites and
+                            applications. I strive to create your website or application to the exact specifications of your liking.
                         </p>
                         <div class="info-list row">
                             <div class="col-sm-6"><span>Name : </span>Kenny Mayer</div>
