clicky game addition

--- a/index.html
+++ b/index.html
@@ -78,10 +78,6 @@
                         <h3 class="subheading">
                             I'm a <strong>Full Stack Web Developer</strong> from Washington, DC. I
                             aim to make a difference through my creative solutions.</h3>
-                        <p>
-                            My passion is to help clients achieve thier goals through my custom-tailered websites and
-                            applications. I strive to create your website or application to the exact specifications of your liking.
-                        </p>
                         <div class="info-list row">
                             <div class="col-sm-6"><span>Name : </span>Kenny Mayer</div>
                             <div class="col-sm-6"><span>Location : </span>Washington, DC</div>
@@ -90,76 +86,6 @@
                             <div class="col-sm-6"><span>Interest : </span>Freelance, Full-time</div>
                         </div>
                         <img class="sign" src="images/signature.png" alt="signature" />
-                    </div>
-                    <div class="block-content">
-                        <h3 class="block-title">Skills</h3>
-                        <label class="progress-bar-label">HTML5 & CSS3</label>
-                        <div class="progress">
-                            <div style="width: 85%;" class="progress-bar" role="progressbar" aria-valuenow="85"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>85%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Bootstrap</label>
-                        <div class="progress">
-                            <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>75%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Javascript & Jquery</label>
-                        <div class="progress">
-                            <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="99"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>70%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Node.js & Express</span></label>
-                        <div class="progress">
-                            <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="67"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>60%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">React.js</span></label>
-                        <div class="progress">
-                            <div style="width: 65%;" class="progress-bar" role="progressbar" aria-valuenow="67"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>65%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Firebase</span></label>
-                        <div class="progress">
-                            <div style="width: 65%;" class="progress-bar" role="progressbar" aria-valuenow="67"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>65%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">MySQL</span></label>
-                        <div class="progress">
-                            <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="67"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>60%</span>
-                            </div>
-                        </div>
-                        <label class="progress-bar-label">Mongodb</span></label>
-                        <div class="progress">
-                            <div style="width: 65%;" class="progress-bar" role="progressbar" aria-valuenow="67"
-                                aria-valuemin="0" aria-valuemax="100">
-                                <span>65%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-content">
-                        <h3 class="block-title">Other Skills</h3>
-                        <ul>
-                            <li>Moment.js</li>
-                            <li>NPM</li>
-                            <li>AJAX</li>
-                            <li>ORM/Sequelize</li>
-                            <li>Yarn</li>
-                            <li>Storybook</li>
-                        </ul>
                     </div>
                     <div class="block-content">
                         <h3 class="block-title">Services</h3>
@@ -460,6 +386,23 @@
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
                                                 <img src="images/portfolio/masonry/npr-logo.jpg" alt="NPR Logo">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 15 END -->
+                                     <!-- WORK 15 START -->
+                                     <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item games">
+                                        <a href="https://github.com/kmayer48/clicky-game" target="_blank">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Clicky Game - Emoji Edition</h2>
+                                                        <hr>
+                                                        <p>A memory game created in React.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/masonry/emoji.png" alt="Emoji">
                                             </div>
                                         </a>
                                     </div>
