--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1>Kenny Mayer</h1>
                     <h2>Full Stack Web Developer</h2>
                     <a target="_blank"
-                        href="https://docs.google.com/document/d/1knei_Jz24s9jOS3bWRGaqkqMikoXnSXOSWm7V1Y9eOY/edit?usp=sharing"
+                        href="https://drive.google.com/file/d/18r6Ql4L6y69e8Hdo30xtEQJAmuV7eQQG/view?usp=sharing"
                         class="btn btn-download">Download Resume</a>
                     <ul class="social">
                         <li><a href="https://www.linkedin.com/in/kmayer21/" target="_blank"><i
