Updated to include Tetris

--- a/index.html
+++ b/index.html
@@ -401,6 +401,23 @@
                                         </a>
                                     </div>
                                     <!-- WORK 15 END -->
+                                     <!-- WORK 16 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item games">
+                                        <a href="https://kmayer48.github.io/tetris/" target="_blank">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Tetris</h2>
+                                                        <hr>
+                                                        <p>The classic tetris game using only Javascript.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/masonry/tetris.png" alt="Tetrominoes">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 16 END -->
                                 </div>
                             </div>
                         </div>
