--- a/index.html
+++ b/index.html
@@ -372,10 +372,9 @@
                                             <div class="portfolio-column">
                                                 <div class="portfolio-hover">
                                                     <div class="portfolio-content">
-                                                        <h2>NPR Web Scraper</h2>
+                                                        <h2>Web Scraper</h2>
                                                         <hr>
-                                                        <p>A web app that lets you scrape news from NPR and store your
-                                                            comments in Mongodb.</p>
+                                                        <p>Scape articles from NPR and save them & comments to a database in Mongodb.</p>
                                                     </div>
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
