--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
                             <div class="col-sm-6"><span>Interest : </span>Freelance, Full-time</div>
                         </div>
                         <h4 class="">
-                            I'm a <strong>Full Stack Web Developer</strong> from Washington, DC. I
-                            aim to make a difference through my creative solutions. I attended a coding boot camp
-                            offered
-                            through George Washington University to pursue my passion for web development.
+                            Subject matter expert in FinTech Information Technology and Operations.
+                            Advanced knowledge and skills in implementing technology efficiencies
+                            while providing strategic guidance for teams in the wealth management
+                            industry. Led and project-managed technology initiatives, implemented
+                            wealth management systems and operations, developed and conducted
+                            technology training sessions, and implemented strategic roadmap for
+                            teams. Proven track record in successfully managing wealth technology
+                            initiatives from initial concept through implementation with tight deadlines in
+                            a fast-paced work environment.
                             <br><br>
                             I am an avid outdoors person who especially loves being around the water. I enjoy
                             paddleboarding, gaming, spending time with friends and family, taking my dog on long walks,
