--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                         <i class="ion-ios-email-outline"></i>
                                     </div>
                                     <div class="contact-details">
-                                        <h5>Inquiries</h5>
+                                        <h5>Email</h5>
                                         <p><a href="mailto:kenny.mayer3@gmail.com">kenny.mayer3@gmail.com</a></p>
                                     </div>
                                 </div>
