--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <div class="name-block">
                 <div class="name-block-container">
                     <h1>Kenny Mayer</h1>
-                    <h2>Full Stack Web Developer</h2>
+                    <h2>Head of IT & Operations Manager</h2>
+                    <br>
+                    <h2>Full Stack Web Developer<h2>
                     <ul class="social">
                         <li><a href="https://www.linkedin.com/in/kmayer21/" target="_blank"><i
                                     class="ion-social-linkedin"></i></a></li>
@@ -77,7 +79,6 @@
                             <div class="col-sm-6"><span>Location : </span>Washington, DC</div>
                             <div class="col-sm-6"><span>Email : </span>kenny.mayer3@gmail.com</div>
                             <div class="col-sm-6"><span>Phone : </span>(571) 296-8975</div>
-                            <div class="col-sm-6"><span>Interest : </span>Freelance, Full-time</div>
                         </div>
                         <h4 class="">
                             Subject matter expert in FinTech Information Technology and Operations.
