--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <div class="name-block">
                 <div class="name-block-container">
                     <h1>Kenny Mayer</h1>
-                    <h2>Head of IT & Operations Manager</h2>
                     <br>
-                    <h2>Full Stack Web Developer<h2>
+                    <h3>Head of IT & Operations Manager</h3>
+                    <h3>Full Stack Web Developer</h3>
+                    <h3>Photographer</h3>
                     <ul class="social">
                         <li><a href="https://www.linkedin.com/in/kmayer21/" target="_blank"><i
                                     class="ion-social-linkedin"></i></a></li>
