--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="content-blocks portfolio">
                 <section class="content">
                     <div class="block-content">
-                        <h3 class="block-title">Portfolio <a href="https://www.github.com/kmayer48" target="_blank"><i
+                        <h3 class="block-title">Web Development Portfolio <a href="https://www.github.com/kmayer48" target="_blank"><i
                                     class="ion-social-github git my-auto"></i></a></li>
                         </h3>
                         <div class="row">
