--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="inline-menu-container">
         <ul class="inline-menu">
             <li class="about menu-item">Profile</li>
-            <li class="portfolio menu-item">Portfolio</li>
+            <li class="portfolio menu-item">Web Development Portfolio</li>
             <li class="resume menu-item">Education</li>
             <li class="contact menu-item">Contact</li>
             <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>
