--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kenny Mayer | Web Dev </title>
+    <title>Kenny Mayer | Head of IT & Operations Manager, Web Dev, Photographer </title>
     <meta name="description" content="Kenny Mayer web developement portfolio.">
     <meta name="author" content="LionCoders" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -33,11 +33,11 @@
         <div class="container">
             <div class="name-block">
                 <div class="name-block-container">
-                    <h1>Kenny Mayer</h1>
+                    <h2>Kenny Mayer</h2>
                     <br>
-                    <h3>Head of IT & Operations Manager</h3>
-                    <h3>Full Stack Web Developer</h3>
-                    <h3>Photographer</h3>
+                    <h3 class="home">Head of IT & Operations Manager</h3>
+                    <h3 class="home">Full Stack Web Developer</h3>
+                    <h3 class="home">Photographer</h3>
                     <ul class="social">
                         <li><a href="https://www.linkedin.com/in/kmayer21/" target="_blank"><i
                                     class="ion-social-linkedin"></i></a></li>
