--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <div class="name-block-container">
                     <h1>Kenny Mayer</h1>
                     <br>
-                    <h3 class="home">Head of IT & Operations Manager</h3>
+                    <h3>Head of IT & Operations Manager</h3>
                     <br>
-                    <h3 class="home">Full Stack Web Developer</h3>
+                    <h3>Full Stack Web Developer</h3>
                     <br>
-                    <h3 class="home">Photographer</h3>
+                    <h3>Photographer</h3>
                     <br>
                     <ul class="social">
                         <li><a href="https://www.linkedin.com/in/kmayer21/" target="_blank"><i
