--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="portfolio-block  menu-block">
                     <div class="portfolio-block-container">
-                        <h2 class="portfolio menu-item">Portfolio</h2>
+                        <h2 class="portfolio menu-item">Web Development Portfolio</h2>
                     </div>
                 </div>
                 <div class="resume-block  menu-block">
