--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img id="profile" src="images/portfolio/masonry/kenny.jpeg">
                         <div class="info-list row">
                             <div class="col-sm-6"><span>Name : </span>Kenny Mayer</div>
-                            <div class="col-sm-6"><span>Location : </span>Washington, DC</div>
+                            <div class="col-sm-6"><span>Location : </span>Frederick, MD</div>
                             <div class="col-sm-6"><span>Email : </span>kenny.mayer3@gmail.com</div>
                             <div class="col-sm-6"><span>Phone : </span>(571) 296-8975</div>
                         </div>
